<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context="com.example.android.testamante.ui.RegisterActivity">

    <ImageView
        android:id="@+id/formLogo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_logo" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/formLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/registerUserName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_white"
                android:drawableLeft="@drawable/ic_user_icon"
                android:drawablePadding="5dp"
                android:hint="@string/username_hint"
                android:maxLines="1"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/registerUserEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_white"
                android:drawableLeft="@drawable/ic_email_black"
                android:drawablePadding="5dp"
                android:hint="@string/email_hint"
                android:maxLines="1"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/registerUserPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rounded_white"
                android:drawableLeft="@drawable/ic_pass_icon"
                android:drawablePadding="5dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/registerUserPhone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rounded_white"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="1dp"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:maxEms="10"
                android:maxLength="10"
                android:maxLines="1"
                android:minEms="10"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <Button
                android:id="@+id/registerSignUpBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_btn"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/sign_up_text"
                android:textColor="@color/white"
                android:textStyle="normal" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
