<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context="com.example.android.testamante.ui.fragments.AboutFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profileOccupationHint"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:text="Occupation"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/profileOccupation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profileOccupationHint"
                    android:background="@drawable/rectangular_white_background"
                    android:gravity="start"
                    android:hint="@string/occupation_hint"
                    android:lines="1"
                    android:maxLength="120"
                    android:minHeight="40dp"
                    android:padding="5dp"
                    android:paddingRight="15dp"
                    android:paddingStart="15dp"
                    android:textSize="14sp" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profileAboutHint"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:text="About Me"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/profileAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profileAboutHint"
                    android:background="@drawable/rectangular_white_background"
                    android:gravity="start"
                    android:hint="@string/about_yourself_hint"
                    android:lines="5"
                    android:maxLength="120"
                    android:minHeight="40dp"
                    android:padding="5dp"
                    android:paddingRight="15dp"
                    android:paddingStart="15dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/profileAboutTotalCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:paddingBottom="3dp"
                    android:paddingRight="3dp"
                    android:paddingTop="3dp"
                    android:text="/120" />

                <TextView
                    android:id="@+id/profileAboutCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_toLeftOf="@+id/profileAboutTotalCount"
                    android:paddingBottom="3dp"
                    android:paddingLeft="3dp"
                    android:paddingTop="3dp"
                    android:text="0" />


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profileInterestsHint"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:text="Interests"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/profileInterests"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profileInterestsHint"
                    android:background="@drawable/rectangular_white_background"
                    android:gravity="start"
                    android:hint="@string/interests_hint"
                    android:lines="5"
                    android:maxLength="120"
                    android:minHeight="40dp"
                    android:padding="5dp"
                    android:paddingRight="15dp"
                    android:paddingStart="15dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/profileInterestsTotalCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:paddingBottom="3dp"
                    android:paddingRight="3dp"
                    android:paddingTop="3dp"
                    android:text="/120" />

                <TextView
                    android:id="@+id/profileInterestsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_toLeftOf="@+id/profileInterestsTotalCount"
                    android:paddingBottom="3dp"
                    android:paddingLeft="3dp"
                    android:paddingTop="3dp"
                    android:text="0" />


            </RelativeLayout>

            <Button
                android:id="@+id/aboutSaveButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_btn"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textStyle="normal" />
        </LinearLayout>

    </ScrollView>


</FrameLayout>
