<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    tools:context="com.example.android.testamante.ui.fragments.ProfileDetailsFragment">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/formLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="Name"
                    android:textSize="18sp"></TextView>

                <EditText
                    android:id="@+id/profileUserName"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="4"
                    android:hint="@string/username_hint"
                    android:maxLines="1"
                    android:paddingRight="15dp"
                    android:paddingStart="15dp"
                    android:singleLine="true"
                    android:textSize="14sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="D.O.B"
                    android:textSize="18sp"></TextView>

                <EditText
                    android:id="@+id/profileDob"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="4"
                    android:clickable="true"
                    android:inputType="date"
                    android:maxLines="1"
                    android:paddingRight="10dp"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="I am a"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/profileGenderSpinner"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="4"
                    android:entries="@array/gender_array"
                    android:paddingRight="10dp"
                    android:paddingStart="10dp"
                    android:prompt="@string/gender_prompt"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="Interested In"
                    android:textSize="18sp"></TextView>

                <Spinner
                    android:id="@+id/profileInterestedIn"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="4"
                    android:entries="@array/gender_array"
                    android:paddingRight="10dp"
                    android:paddingStart="10dp"
                    android:prompt="@string/gender_prompt"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/profileActivityNextButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_btn"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textStyle="normal" />
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>